# binutils-strings-rust

./: Cargo.toml  README.md  about-project.md  benchmarks.md  generate-readme.sh  generate-tests.sh  run-bench.sh
src/: main.rs  strings.rs  utils.rs
test-resources/: a.out  default-output.txt  output-datasection.txt  output-with-address-hex.txt  output-with-address-octal.txt  output-with-encoding-8-bits.txt  output-with-filenames.txt  output-with-num-bytes-8.txt  output-with-separator.txt  output-with-unicode-escape-address-hex.txt  output-with-unicode-escape.txt  test.c
