[package]
name = "strings"
version = "0.1.0"
edition = "2021"
description="print the strings of printable characters in files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "3.0.10"
default-features = false
features = ["std", "derive"]

[dependencies]
atty = "0.2"

[dependencies.object]
version = "0.30.0"
features = ["read"]
