[package]
name = "strings"
version = "0.1.0"
edition = "2024"
description="Print the strings of printable characters in files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.6.1"
default-features = false
features = ["std", "derive"]

[dependencies.object]
version = "0.39.1"
features = ["read"]
